packages/typ/tests/fixtures/diagnostics/0289_fun_locally_abstract_mismatch_05.ml.expected
File "0289_fun_locally_abstract_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0289_fun_locally_abstract_mismatch_05 is not a valid module name.

File "0289_fun_locally_abstract_mismatch_05.ml", line 1, characters 41-42:
1 | let bad_epsilon (type a) (x : a) : int = x
                                             ^
Error: The value x has type a but an expression was expected of type int
