packages/typ/tests/fixtures/diagnostics/0289_fun_locally_abstract_mismatch_05.ml
let bad_epsilon (type a) (x : a) : int = x
